--- a/doc/views/demo-helper-elements.htm
+++ b/doc/views/demo-helper-elements.htm
@@ -91,7 +91,7 @@
 
         <h5>Other examples</h5>
         <p>
-            The attribute accepts a combination of "all none filter reset", in space separated string. Example:
+            The attribute accepts a combination of "all none filter reset close", in space separated string. Example:
             <ul>
                 <li><code>helper-elements="filter"</code>: will display the search (filter) field only</li>
                 <li><code>helper-elements="all none"</code>: will display the "Select all" and "Select none" buttons</li>
